--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
     <img src="" alt="no-star" class="star-rating cNoStarr" *ngIf="!service.defaultStarred"  (click)="clickImg()">
     <img src="" alt="star" class="star-rating cStarr" *ngIf="service.defaultStarred"  (click)="clickImg()">
     <h1>Kalyan</h1>
+    <h2>Kumar</h2>
   </div>
 </div>
