Changes in Branch-2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
   <div class="csStariing">
     <img src="" alt="no-star" class="star-rating cNoStarr" *ngIf="!service.defaultStarred"  (click)="clickImg()">
     <img src="" alt="star" class="star-rating cStarr" *ngIf="service.defaultStarred"  (click)="clickImg()">
+    <h2>Branch</h2>
+    <h2>2 Issue</h2>
   </div>
 </div>
